add and updated

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="brand"><img height="40" src="/assets/templates/studionions/images/logotip.svg"></div>
         <nav class="header-navigation">
           <ul class="header-navigation-list">
-            <li class="list-item-menu"><a href="#" class="link-menu button">почему мы?</a></li>
-            <li class="list-item-menu"><a href="#" class="link-menu button">эксперты</a></li>
+            <li class="list-item-menu"><a href="#" class="link-menu button">Почему мы?</a></li>
+            <li class="list-item-menu"><a href="#" class="link-menu button">Эксперты</a></li>
             <li class="list-item-menu"><a href="#" class="link-menu button">Услуги и цены</a></li>
             <li class="list-item-menu"><a href="#" class="link-menu button">Контакты</a></li>
           </ul>
@@ -31,8 +31,8 @@
         <nav data-ix="menu-mobile-load" class="header-navigation-mobile">
           <ul class="header-navigation-list">
             <li class="list-item-menu"><a href="#" class="link-menu button">Услуги и цены</a></li>
-            <li class="list-item-menu"><a href="#" class="link-menu button">почему мы?</a></li>
-            <li class="list-item-menu"><a href="#" class="link-menu button">эксперты</a></li>
+            <li class="list-item-menu"><a href="#" class="link-menu button">Почему мы?</a></li>
+            <li class="list-item-menu"><a href="#" class="link-menu button">Эксперты</a></li>
             <li class="list-item-menu"><a href="#" class="link-menu button">Контакты</a></li>
           </ul>
         </nav><a href="tel:+74951200977" class="full-phone-block">
@@ -134,7 +134,94 @@
           <h3 class="h3">О нас в цифрах</h3>
           <p class="paragraph_st_text">ООО Независимый Экспертный Центр «Триумф» с 2007 года занимается проверкой на полиграфе с гарантией качества и соблюдением сроков.</p>
         </div>
-        <div class="content-block-st"></div>
+        <div class="content-block-st">
+          <div class="row row-about-us">
+            <div class="col-sm-4 con-st">
+              <div class="block-number">
+                <div class="ci_text">10</div>
+                <div class="ci_text_block">ТОПОВЫХ ЭКСПЕРТОВ</div>
+              </div>
+            </div>
+            <div class="col-sm-4 con-st">
+              <div class="block-number">
+                <div class="ci_text">5</div>
+                <div class="ci_text_block">ОФИСОВ В МОСКВЕ</div>
+              </div>
+            </div>
+            <div class="col-sm-4 con-st">
+              <div class="block-number">
+                <div class="ci_text">37.000</div>
+                <div class="ci_text_block">ПРОВЕДЕННЫХ ПРОВЕРОК <br>НА ПОЛИГРАФЕ</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-about-us">
+      <div class="block-cent-auto">
+        <div class="block-name-section">
+          <h3 class="h3">Полиграф</h3>
+          <p class="paragraph_st_text">Почему выгодно применять полиграф<br>(детектор лжи) для бизнеса и организаций?</p>
+        </div>
+        <div class="content-block-st">
+          <div class="row row-block-text">
+            <div class="col-md-6 con-block-text">
+              <div class="heading-block-text">
+                <h2 class="h2-black">Полиграф при приеме на работу</h2>
+              </div>
+              <p class="paragraph_st_cont">Работодатель, получая информацию, имеет возможность защитить себя и свой коллектив от проблемных сотрудников, несущих финансовые риски:<br><br>– совершивших уголовные преступления,<br>(в т.ч. и нераскрытых, которых, согласно статистике, большинство);<br><br>- представивших заведомо–ложные сведения о себе (причины увольнения, скрываемые доходы в ущерб работодателю, злоупотребление алкоголем, наркотиками, серьезные хищения и т.д.).</p>
+              <div class="heading-block-text">
+                <h2 class="h2-black">При расследовании</h2>
+              </div>
+              <p class="paragraph_st_cont">Самый быстрый и экономичный способ понять, кто украл или совершил преступление, особенно, если других доказательств нет, а информацию получить надо быстрее.</p>
+              <div class="heading-block-text">
+                <h2 class="h2-black">Главное условия для выгоды!</h2>
+              </div>
+              <p class="paragraph_st_cont">Только грамотный эксперт, соблюдающий методику исследования. Ведь полиграф — это не «детектор лжи», а прибор с медицинскими датчиками–регистраторами, которые самостоятельно за эксперта не проведут грамотно исследование и не сядут вместо него делать расчетную часть, чтобы получить вывод: «искренний» или «скрывающий информацию».</p>
+            </div>
+            <div class="col-md-6 con-block-photo">
+              <div style="background-image: url('/assets/templates/studionions/images/photo_item_0001.jpg');" class="con-block-photo-item"></div>
+              <div style="background-image: url('/assets/templates/studionions/images/photo_item_0002.jpg');" class="con-block-photo-item"></div>
+              <div style="background-image: url('/assets/templates/studionions/images/photo_item_0003.jpg');" class="con-block-photo-item"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-about-us">
+      <div class="block-cent-auto">
+        <div class="block-name-section">
+          <h3 class="h3">Почему мы?</h3>
+          <p class="paragraph_st_text">Вы обращаетесь к нам с задачей, которую необходимо решить. Мы конкретизируем цель и проводим тщательную проверку по интересующим Заказчика факторам риска.</p>
+        </div>
+        <div class="content-block-st">
+          <div class="row row-block-text">
+            <div class="col-md-6 con-block-text">
+              <div class="heading-block-text">
+                <h2 class="h2-black">Для нас это не просто работа — это любимое дело!</h2>
+              </div>
+              <p class="paragraph_st_cont">Уже более 80 организаций перешли к нам от других «горе–специалистов» и остались довольны.</p>
+              <div class="heading-block-text">
+                <h2 class="h2-black">Достойный опыт за 10 лет</h2>
+              </div>
+              <p class="paragraph_st_cont">В НЭЦ «Триумф» профессиональными экспертами проведено свыше 37.000 проверок на полиграфе и мы никуда не делись. Наша компания успешно существует с 2007 года.</p>
+            </div>
+            <div class="col-md-6 con-block-photo right">
+              <div style="background-image: url('/assets/templates/studionions/images/photo_item_0004.jpg');" class="con-block-photo-item"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-about-us">
+      <div class="block-cent-auto no">
+        <div class="block-expert-full">
+          <div class="content-expert">
+            <h3 class="h2-black">Закажите профессиональную проверку у наших экспертов уже сегодня!</h3>
+            <div class="slider-expert"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
