add and updated

--- a/index.html
+++ b/index.html
@@ -219,10 +219,87 @@
         <div class="block-expert-full">
           <div class="content-expert">
             <h3 class="h2-black">Закажите профессиональную проверку у наших экспертов уже сегодня!</h3>
-            <div class="slider-expert"></div>
+            <div class="slider-expert">
+              <div class="slick">
+                <div class="slick-item">
+                  <div class="box-expert">
+                    <div class="expert-photo"><img src="/assets/templates/studionions/images/photo_item_slick.jpg" class="img-responsive img-cricle block-center"></div>
+                    <div class="expert-fio text-center">
+                      <h3 class="h3-fio">Утенков Геннадий Геннадьевич</h3>
+                      <p class="text-center">Эксперт высшей категории.<br>Судебный эксперт.</p>
+                    </div>
+                    <div class="expert-description">
+                      <p>Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="slick-item">
+                  <div class="box-expert">
+                    <div class="expert-photo"><img src="/assets/templates/studionions/images/photo_item_slick.jpg" class="img-responsive img-cricle block-center"></div>
+                    <div class="expert-fio text-center">
+                      <h3 class="h3-fio">Утенков Геннадий Геннадьевич</h3>
+                      <p class="text-center">Эксперт высшей категории.<br>Судебный эксперт.</p>
+                    </div>
+                    <div class="expert-description">
+                      <p>Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="slick-item">
+                  <div class="box-expert">
+                    <div class="expert-photo"><img src="/assets/templates/studionions/images/photo_item_slick.jpg" class="img-responsive img-cricle block-center"></div>
+                    <div class="expert-fio text-center">
+                      <h3 class="h3-fio">Утенков Геннадий Геннадьевич</h3>
+                      <p class="text-center">Эксперт высшей категории.<br>Судебный эксперт.</p>
+                    </div>
+                    <div class="expert-description">
+                      <p>Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="slick-item">
+                  <div class="box-expert">
+                    <div class="expert-photo"><img src="/assets/templates/studionions/images/photo_item_slick.jpg" class="img-responsive img-cricle block-center"></div>
+                    <div class="expert-fio text-center">
+                      <h3 class="h3-fio">Утенков Геннадий Геннадьевич</h3>
+                      <p class="text-center">Эксперт высшей категории.<br>Судебный эксперт.</p>
+                    </div>
+                    <div class="expert-description">
+                      <p>Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="slick-item">
+                  <div class="box-expert">
+                    <div class="expert-photo"><img src="/assets/templates/studionions/images/photo_item_slick.jpg" class="img-responsive img-cricle block-center"></div>
+                    <div class="expert-fio text-center">
+                      <h3 class="h3-fio">Утенков Геннадий Геннадьевич</h3>
+                      <p class="text-center">Эксперт высшей категории.<br>Судебный эксперт.</p>
+                    </div>
+                    <div class="expert-description">
+                      <p>Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="slick-item">
+                  <div class="box-expert">
+                    <div class="expert-photo"><img src="/assets/templates/studionions/images/photo_item_slick.jpg" class="img-responsive img-cricle block-center"></div>
+                    <div class="expert-fio text-center">
+                      <h3 class="h3-fio">Утенков Геннадий Геннадьевич</h3>
+                      <p class="text-center">Эксперт высшей категории.<br>Судебный эксперт.</p>
+                    </div>
+                    <div class="expert-description">
+                      <p>Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="/assets/templates/studionions/js/app.js"></script>
+    <script type="text/javascript" src="/assets/templates/studionions/js/main.js"></script>
   </body>
 </html>
